--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,8 @@
         <item name="colorOnSurface">@color/onSurface</item>
         <item name="colorError">@color/error</item>
         <item name="colorOnError">@color/onError</item>
+        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:windowLightStatusBar">false</item>
     </style>
 
     <style name="Theme.F1Trivia" parent="Base.Theme.F1Trivia" />
